--- a/code/Regresion Lineal.ipynb
+++ b/code/Regresion Lineal.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -55,8 +55,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b) Descripción del conjunto de datos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -66,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(97, 9)\n",
+      "El dataset se compone de 97  registros (pacientes), cada uno de los cuáles está descrito por 9 variables.\n",
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 97 entries, 0 to 96\n",
@@ -81,89 +88,370 @@
       "pgg45      97 non-null int64\n",
       "lpsa       97 non-null float64\n",
       "dtypes: float64(5), int64(4)\n",
-      "memory usage: 6.9 KB\n",
-      "\n",
-      "          lcavol    lweight        age       lbph        svi        lcp  \\\n",
-      "count  97.000000  97.000000  97.000000  97.000000  97.000000  97.000000   \n",
-      "mean    1.350010   3.628943  63.865979   0.100356   0.216495  -0.179366   \n",
-      "std     1.178625   0.428411   7.445117   1.450807   0.413995   1.398250   \n",
-      "min    -1.347074   2.374906  41.000000  -1.386294   0.000000  -1.386294   \n",
-      "25%     0.512824   3.375880  60.000000  -1.386294   0.000000  -1.386294   \n",
-      "50%     1.446919   3.623007  65.000000   0.300105   0.000000  -0.798508   \n",
-      "75%     2.127041   3.876396  68.000000   1.558145   0.000000   1.178655   \n",
-      "max     3.821004   4.780383  79.000000   2.326302   1.000000   2.904165   \n",
-      "\n",
-      "         gleason       pgg45       lpsa  \n",
-      "count  97.000000   97.000000  97.000000  \n",
-      "mean    6.752577   24.381443   2.478387  \n",
-      "std     0.722134   28.204035   1.154329  \n",
-      "min     6.000000    0.000000  -0.430783  \n",
-      "25%     6.000000    0.000000   1.731656  \n",
-      "50%     7.000000   15.000000   2.591516  \n",
-      "75%     7.000000   40.000000   3.056357  \n",
-      "max     9.000000  100.000000   5.582932  \n",
-      "\n"
+      "memory usage: 6.9 KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lcavol</th>\n",
+       "      <th>lweight</th>\n",
+       "      <th>age</th>\n",
+       "      <th>lbph</th>\n",
+       "      <th>svi</th>\n",
+       "      <th>lcp</th>\n",
+       "      <th>gleason</th>\n",
+       "      <th>pgg45</th>\n",
+       "      <th>lpsa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "      <td>97.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.350010</td>\n",
+       "      <td>3.628943</td>\n",
+       "      <td>63.865979</td>\n",
+       "      <td>0.100356</td>\n",
+       "      <td>0.216495</td>\n",
+       "      <td>-0.179366</td>\n",
+       "      <td>6.752577</td>\n",
+       "      <td>24.381443</td>\n",
+       "      <td>2.478387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.178625</td>\n",
+       "      <td>0.428411</td>\n",
+       "      <td>7.445117</td>\n",
+       "      <td>1.450807</td>\n",
+       "      <td>0.413995</td>\n",
+       "      <td>1.398250</td>\n",
+       "      <td>0.722134</td>\n",
+       "      <td>28.204035</td>\n",
+       "      <td>1.154329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-1.347074</td>\n",
+       "      <td>2.374906</td>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>-1.386294</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.386294</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.430783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.512824</td>\n",
+       "      <td>3.375880</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>-1.386294</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-1.386294</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.731656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.446919</td>\n",
+       "      <td>3.623007</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>0.300105</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.798508</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>2.591516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.127041</td>\n",
+       "      <td>3.876396</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>1.558145</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.178655</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>3.056357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>3.821004</td>\n",
+       "      <td>4.780383</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>2.326302</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.904165</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>5.582932</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          lcavol    lweight        age       lbph        svi        lcp  \\\n",
+       "count  97.000000  97.000000  97.000000  97.000000  97.000000  97.000000   \n",
+       "mean    1.350010   3.628943  63.865979   0.100356   0.216495  -0.179366   \n",
+       "std     1.178625   0.428411   7.445117   1.450807   0.413995   1.398250   \n",
+       "min    -1.347074   2.374906  41.000000  -1.386294   0.000000  -1.386294   \n",
+       "25%     0.512824   3.375880  60.000000  -1.386294   0.000000  -1.386294   \n",
+       "50%     1.446919   3.623007  65.000000   0.300105   0.000000  -0.798508   \n",
+       "75%     2.127041   3.876396  68.000000   1.558145   0.000000   1.178655   \n",
+       "max     3.821004   4.780383  79.000000   2.326302   1.000000   2.904165   \n",
+       "\n",
+       "         gleason       pgg45       lpsa  \n",
+       "count  97.000000   97.000000  97.000000  \n",
+       "mean    6.752577   24.381443   2.478387  \n",
+       "std     0.722134   28.204035   1.154329  \n",
+       "min     6.000000    0.000000  -0.430783  \n",
+       "25%     6.000000    0.000000   1.731656  \n",
+       "50%     7.000000   15.000000   2.591516  \n",
+       "75%     7.000000   40.000000   3.056357  \n",
+       "max     9.000000  100.000000   5.582932  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#(b)\n",
-    "#97 filas 9 columnas\n",
-    "print df.shape\n",
-    "print \"\"\n",
+    "print 'El dataset se compone de %d'% df.shape[0],' registros (pacientes), cada uno de los cuáles está descrito por %d variables.\\n'% df.shape[1]\n",
     "df.info()\n",
-    "print \"\"\n",
-    "print df.describe()\n",
-    "print \"\""
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las variables del conjunto de datos se describen a continuación:\n",
+    "1. **lcavol**: Logaritmo del volumen de cáncer presente. (Predictor)\n",
+    "3. **lweight**: Logaritmo del peso de la próstata. (Predictor)\n",
+    "4. **age**: Edad. (Predictor)\n",
+    "5. **lbph**: Logaritmo de la cantidad de hiperplasia benigna de próstata. (Predictor)\n",
+    "6. **svi**: Indica si existe invasión de la vesícula seminal o no. (Predictor)\n",
+    "7. **lcp**: Logaritmo de la penetración capsular. (Predictor)\n",
+    "8. **gleason**: Medida del grado de agresividad del cáncer, en base a la escala de Gleason. (Predictor)\n",
+    "9. **pgg45**: Porcentaje que representa la presencia de los patrones de Gleason 4 y 5. (Predictor)\n",
+    "10. **lpsa**: Logaritmo del nivel de antígeno prostático específico (PSA). (Variable que se quiere predecir)\n",
+    "\n",
+    "Se debe resaltar que no existen valores nulos para ningún registro."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### c) Normalización de los datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             lcavol       lweight           age          lbph           svi  \\\n",
-      "count  9.700000e+01  9.700000e+01  9.700000e+01  9.700000e+01  9.700000e+01   \n",
-      "mean  -9.614302e-17 -3.216213e-16  3.433679e-16 -4.721309e-17 -1.327689e-16   \n",
-      "std    1.005195e+00  1.005195e+00  1.005195e+00  1.005195e+00  1.005195e+00   \n",
-      "min   -2.300218e+00 -2.942386e+00 -3.087227e+00 -1.030029e+00 -5.256575e-01   \n",
-      "25%   -7.139973e-01 -5.937689e-01 -5.219612e-01 -1.030029e+00 -5.256575e-01   \n",
-      "50%    8.264956e-02 -1.392703e-02  1.531086e-01  1.383966e-01 -5.256575e-01   \n",
-      "75%    6.626939e-01  5.806076e-01  5.581506e-01  1.010033e+00 -5.256575e-01   \n",
-      "max    2.107397e+00  2.701661e+00  2.043304e+00  1.542252e+00  1.902379e+00   \n",
-      "\n",
-      "                lcp       gleason         pgg45       lpsa  \n",
-      "count  9.700000e+01  9.700000e+01  9.700000e+01  97.000000  \n",
-      "mean   8.240831e-17 -1.476482e-16 -1.816989e-16   2.478387  \n",
-      "std    1.005195e+00  1.005195e+00  1.005195e+00   1.154329  \n",
-      "min   -8.676552e-01 -1.047571e+00 -8.689573e-01  -0.430783  \n",
-      "25%   -8.676552e-01 -1.047571e+00 -8.689573e-01   1.731656  \n",
-      "50%   -4.450983e-01  3.444069e-01 -3.343557e-01   2.591516  \n",
-      "75%    9.762744e-01  3.444069e-01  5.566470e-01   3.056357  \n",
-      "max    2.216735e+00  3.128363e+00  2.695054e+00   5.582932  \n",
-      "Hola\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lcavol</th>\n",
+       "      <th>lweight</th>\n",
+       "      <th>age</th>\n",
+       "      <th>lbph</th>\n",
+       "      <th>svi</th>\n",
+       "      <th>lcp</th>\n",
+       "      <th>gleason</th>\n",
+       "      <th>pgg45</th>\n",
+       "      <th>lpsa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>9.700000e+01</td>\n",
+       "      <td>9.700000e+01</td>\n",
+       "      <td>9.700000e+01</td>\n",
+       "      <td>9.700000e+01</td>\n",
+       "      <td>9.700000e+01</td>\n",
+       "      <td>9.700000e+01</td>\n",
+       "      <td>9.700000e+01</td>\n",
+       "      <td>9.700000e+01</td>\n",
+       "      <td>97.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-9.614302e-17</td>\n",
+       "      <td>-3.216213e-16</td>\n",
+       "      <td>3.433679e-16</td>\n",
+       "      <td>-4.721309e-17</td>\n",
+       "      <td>-1.327689e-16</td>\n",
+       "      <td>8.240831e-17</td>\n",
+       "      <td>-1.476482e-16</td>\n",
+       "      <td>-1.816989e-16</td>\n",
+       "      <td>2.478387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.005195e+00</td>\n",
+       "      <td>1.005195e+00</td>\n",
+       "      <td>1.005195e+00</td>\n",
+       "      <td>1.005195e+00</td>\n",
+       "      <td>1.005195e+00</td>\n",
+       "      <td>1.005195e+00</td>\n",
+       "      <td>1.005195e+00</td>\n",
+       "      <td>1.005195e+00</td>\n",
+       "      <td>1.154329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-2.300218e+00</td>\n",
+       "      <td>-2.942386e+00</td>\n",
+       "      <td>-3.087227e+00</td>\n",
+       "      <td>-1.030029e+00</td>\n",
+       "      <td>-5.256575e-01</td>\n",
+       "      <td>-8.676552e-01</td>\n",
+       "      <td>-1.047571e+00</td>\n",
+       "      <td>-8.689573e-01</td>\n",
+       "      <td>-0.430783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-7.139973e-01</td>\n",
+       "      <td>-5.937689e-01</td>\n",
+       "      <td>-5.219612e-01</td>\n",
+       "      <td>-1.030029e+00</td>\n",
+       "      <td>-5.256575e-01</td>\n",
+       "      <td>-8.676552e-01</td>\n",
+       "      <td>-1.047571e+00</td>\n",
+       "      <td>-8.689573e-01</td>\n",
+       "      <td>1.731656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8.264956e-02</td>\n",
+       "      <td>-1.392703e-02</td>\n",
+       "      <td>1.531086e-01</td>\n",
+       "      <td>1.383966e-01</td>\n",
+       "      <td>-5.256575e-01</td>\n",
+       "      <td>-4.450983e-01</td>\n",
+       "      <td>3.444069e-01</td>\n",
+       "      <td>-3.343557e-01</td>\n",
+       "      <td>2.591516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.626939e-01</td>\n",
+       "      <td>5.806076e-01</td>\n",
+       "      <td>5.581506e-01</td>\n",
+       "      <td>1.010033e+00</td>\n",
+       "      <td>-5.256575e-01</td>\n",
+       "      <td>9.762744e-01</td>\n",
+       "      <td>3.444069e-01</td>\n",
+       "      <td>5.566470e-01</td>\n",
+       "      <td>3.056357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2.107397e+00</td>\n",
+       "      <td>2.701661e+00</td>\n",
+       "      <td>2.043304e+00</td>\n",
+       "      <td>1.542252e+00</td>\n",
+       "      <td>1.902379e+00</td>\n",
+       "      <td>2.216735e+00</td>\n",
+       "      <td>3.128363e+00</td>\n",
+       "      <td>2.695054e+00</td>\n",
+       "      <td>5.582932</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             lcavol       lweight           age          lbph           svi  \\\n",
+       "count  9.700000e+01  9.700000e+01  9.700000e+01  9.700000e+01  9.700000e+01   \n",
+       "mean  -9.614302e-17 -3.216213e-16  3.433679e-16 -4.721309e-17 -1.327689e-16   \n",
+       "std    1.005195e+00  1.005195e+00  1.005195e+00  1.005195e+00  1.005195e+00   \n",
+       "min   -2.300218e+00 -2.942386e+00 -3.087227e+00 -1.030029e+00 -5.256575e-01   \n",
+       "25%   -7.139973e-01 -5.937689e-01 -5.219612e-01 -1.030029e+00 -5.256575e-01   \n",
+       "50%    8.264956e-02 -1.392703e-02  1.531086e-01  1.383966e-01 -5.256575e-01   \n",
+       "75%    6.626939e-01  5.806076e-01  5.581506e-01  1.010033e+00 -5.256575e-01   \n",
+       "max    2.107397e+00  2.701661e+00  2.043304e+00  1.542252e+00  1.902379e+00   \n",
+       "\n",
+       "                lcp       gleason         pgg45       lpsa  \n",
+       "count  9.700000e+01  9.700000e+01  9.700000e+01  97.000000  \n",
+       "mean   8.240831e-17 -1.476482e-16 -1.816989e-16   2.478387  \n",
+       "std    1.005195e+00  1.005195e+00  1.005195e+00   1.154329  \n",
+       "min   -8.676552e-01 -1.047571e+00 -8.689573e-01  -0.430783  \n",
+       "25%   -8.676552e-01 -1.047571e+00 -8.689573e-01   1.731656  \n",
+       "50%   -4.450983e-01  3.444069e-01 -3.343557e-01   2.591516  \n",
+       "75%    9.762744e-01  3.444069e-01  5.566470e-01   3.056357  \n",
+       "max    2.216735e+00  3.128363e+00  2.695054e+00   5.582932  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "#(c)\n",
+    "\n",
     "#Normalizacion\n",
     "scaler = StandardScaler()\n",
     "df_scaled = pd.DataFrame(scaler.fit_transform(df), columns=df.columns)\n",
+    "\n",
     "#La variable Y (lPSA) no se normaliza, sólo se normalizan las caracteristicas/predictores (features)\n",
     "df_scaled['lpsa'] = df['lpsa']\n",
     "\n",
     "# Notamos que una vez normalizado, el promedio (mean) de cada feature es practicamente 0\n",
     "# y la desviacion estandar (std) es muy cercana a 1.\n",
-    "print df_scaled.describe()"
+    "df_scaled.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Importancia de Normalizar\n",
+    "Antes generar un modelo predictivo es necesario normalizar los datos, pues se está trabajando con variables medidas en unidades y escalas diferentes. Al normalizar, se eliminan los efectos de la media y la varianza de cada variable, volviéndose posible realizar comparaciones razonables entre estas. Sólo se deben normalizar las características (_features_), por tanto la variable _lpsa_ se mantiene respecto al _dataset_ original. También, se observa que la media de cada variable tiende a 0 y la varianza es muy cercana a 1. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### d) Regresión lineal ordinaria"
    ]
   },
   {
@@ -186,7 +474,6 @@
    ],
    "source": [
     "import sklearn.linear_model as lm\n",
-    "#(d)\n",
     "# Se crea el modelo de regresion lineal\n",
     "X = df_scaled.ix[:,:-1] # Se obtinen las Caracteristicas (features) lcavol...pgg45\n",
     "N = X.shape[0] # Cantidad de datos (97 filas/registros)\n",
@@ -201,6 +488,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### e) Pesos y Z-score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
@@ -208,7 +502,6 @@
    },
    "outputs": [],
    "source": [
-    "#(e)\n",
     "# Se obtiene el peso asociado a cada variable y su error estandar\n",
     "weights = linreg.coef_\n",
     "SEM = np.asarray(Xtrain.std()) / np.sqrt(len(Xtrain))\n",
