correcion de z-score

--- a/code/Regresion Lineal.ipynb
+++ b/code/Regresion Lineal.ipynb
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -507,35 +507,44 @@
      "output_type": "stream",
      "text": [
       "Variable     Peso       Z-score   \n",
-      "lcavol       0.6760     5.2215\n",
-      "lweight      0.2617     1.9155\n",
-      "age         -0.1407    -1.1373\n",
-      "lbph         0.2091     1.6874\n",
-      "svi          0.3036     2.4371\n",
-      "lcp         -0.2870    -2.3329\n",
-      "gleason     -0.0212    -0.1758\n",
-      "pgg45        0.2656     2.0816\n"
+      "lcavol       0.6760     5.3198\n",
+      "lweight      0.2617     2.7270\n",
+      "age         -0.1407    -1.3838\n",
+      "lbph         0.2091     2.0380\n",
+      "svi          0.3036     2.4479\n",
+      "lcp         -0.2870    -1.8507\n",
+      "gleason     -0.0212    -0.1454\n",
+      "pgg45        0.2656     1.7228\n",
+      "intercept     2.4649    27.3593\n"
      ]
     }
    ],
    "source": [
     "# Se obtiene el peso asociado a cada variable y su error estandar\n",
     "weights = linreg.coef_\n",
-    "SEM = np.asarray(Xtrain.std()) / np.sqrt(len(Xtrain))\n",
+    "\n",
+    "# Se estima la varianza \n",
+    "yhat_train = linreg.predict(Xtrain)\n",
+    "N = Xtrain.shape[0]\n",
+    "p = Xtrain.shape[1]\n",
+    "varianza = sum(np.power(yhat_train - ytrain, 2)) / (N - p - 1)\n",
+    "\n",
+    "# Se obtiene vj que es el elemnto jth de la diagonal de (X.T*X)^-1\n",
+    "vj = np.diag(np.linalg.pinv(Xtrain.T.dot(Xtrain)))\n",
+    "\n",
     "# A partir de lo anterior, se calculan los Z-score de cada variable\n",
-    "Z_score = weights / SEM\n",
-    "var = ['lcavol','lweight','age','lbph','svi','lcp','gleason','pgg45']\n",
+    "Z_score = weights/( np.sqrt(varianza* vj))\n",
     "\n",
     "print '{:12} {:10} {:10}'.format('Variable', 'Peso', 'Z-score')\n",
-    "for i in range(len(var)):\n",
-    "    print '{:8} {:10.4f} {:10.4f}'.format(var[i], weights[i], Z_score[i])"
+    "for name, w, z in zip(Xtrain.columns.values, weights, Z_score):\n",
+    "    print '{:8} {:10.4f} {:10.4f}'.format(name, w, z)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "De acuerdo al valor de *z_score*, las variables que presentan una mayor correlación con la variable a predecir son *lcavol*, *svi* y *lcp*. Si se utiliza un nivel de significancia del 5%, aquellas variables que se encuentren en el intervalo [-1.668, 1.668] no existirá suficiente evidencia que demuestre la relación con *lpsa*. Así, las variables *age* y *gleason* no están relacionadas con la variable a predecir."
+    "De acuerdo al valor de *z_score*, las variables que presentan una mayor correlación con la variable a predecir son *lcavol*, *lweight* y *svi*. Si se utiliza un nivel de significancia del 5%, aquellas variables que se encuentren en el intervalo [-1.668, 1.668] no existirá suficiente evidencia que demuestre la relación con *lpsa*. Así, las variables *age* y *gleason* no están relacionadas con la variable a predecir."
    ]
   },
   {
@@ -641,8 +650,17 @@
    "metadata": {},
    "source": [
     "##### ¿Existe normalidad en los datos?\n",
-    "Se puede observar en el gráfico, que el conjunto de errores en los datos de entrenamiento comparados con los percentiles de una distribución normal pueden representarse mediante una recta. Esto se reafirmado con el coeficiente de correlación $R^2 = 0.9913$. Como consecuencia de lo anterior, y de acuerdo con el marco teórico, es correcto señalar que los errores siguen una distribución normal."
+    "Se puede observar en el gráfico, que el conjunto de errores en los datos de entrenamiento comparados con los percentiles de una distribución normal pueden representarse mediante una recta. Esto se reafirmado con el coeficiente de correlación $R^2 = 0.9827$. Como consecuencia de lo anterior, y de acuerdo con el marco teórico, es correcto señalar que los errores siguen una distribución normal."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
