--- a/code/Utilidades de Peliculas.ipynb
+++ b/code/Utilidades de Peliculas.ipynb
@@ -50,7 +50,7 @@
     "X_val = csr_matrix(mmread('../data/dev.x.mm'))\n",
     "y_val = np.loadtxt('../data/dev.y.dat')\n",
     "\n",
-    "#Se Leen y cargan datos de validacion\n",
+    "#Se Leen y cargan datos de prueba\n",
     "X_test = csr_matrix(mmread('../data/test.x.mm'))\n",
     "y_test = np.loadtxt('../data/test.y.dat')\n",
     "\n",
@@ -71,7 +71,7 @@
    "source": [
     "### b) Construcción del modelo\n",
     "Se utiliza el modelo ElasticNet propuesto en el paper \"*Movie Reviews and Revenues: An Experiment in Text Regression*\". El cual es una regresión lineal que combina la norma L1 y L2 para penalizar, como se expresa en la siguiente ecuación:\n",
-    "$$\\widehat{\\theta} = argmin\\frac{1}{2n} \\sum_{i=0}^n (y_i - (\\beta_0 + x_i^T\\beta)^2  + \\lambda P(B)$$\n",
+    "$$\\widehat{\\theta} = argmin\\frac{1}{2n} \\sum_{i=0}^n (y_i - (\\beta_0 + x_i^T\\beta))^2  + \\lambda P(B)$$\n",
     "$$P(B) = \\sum_{j=0}^p (\\frac{1}{2}(1-\\alpha)\\beta_j^2 + \\alpha |\\beta_j|)$$\n",
     "El parámetro $\\alpha$ es un valor que va de 0 a 1 e indica el *tradeoff* entre las penalizaciones. Si es 0 significa que se penaliza mediante Ridge y si es 1 con Lasso.\n",
     "Para experimentar se fijo el valor de $\\alpha$ y se regularizó $\\lambda$ con valores en el intervalo $[10^{-2}, 10]$. Una vez terminado el ciclo de iteraciones se guarda el mejor $\\lambda_{best}$ para un $\\alpha$ determinado. Luego, se cambia el valor de $\\alpha$ y se vuelve a iterar. Los valores considerados para el parámetro $\\alpha$ son $[0,0.25,0.5,0.75,1]$ debido al tiempo de ejecución. Una vez encontrado los mejores $\\lambda_{best}$ para cada $\\alpha$, se genera el modelo con el mejor par $\\lambda_{best}$, $\\alpha$ y se procede a usar el conjunto de prueba para determinar el coeficiente de determinación."
