pregunta 2 avance hasta item e

--- a/ML-Tarea2/Pregunta 2/Pregunta 2.ipynb
+++ b/ML-Tarea2/Pregunta 2/Pregunta 2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -71,12 +71,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### b) En esta seccion se se preprocesa el texto mediante la utilización de las operaciones lower-casing, y stemming. Para ello se crea lafuncion word_extractor."
+    "### b) En esta sección se pre procesa el texto mediante la utilización de las operaciones lower-casing, y stemming. Para ello se crea la función word_extractor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -129,21 +129,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En el caso anterior, el stemming lleva todas las palabras a su raíz sin importar el contexto en donde estas se encuentren. Stemming no puede discriminar, y solo se basa en ver las conjugaciones de las palabras de forma heurísticas, y dependiendo de la terminación es como decide a que raíz pertenece. Esto puede ocasionar problemas como por ejemplo con la palabra university, en donde el proceso de stemming la transforma a univers y puede ocasionar problemas ya que cambia el significado.\n",
+    "En el caso anterior, el stemming lleva todas las palabras a su raíz sin importar el contexto en donde estas se encuentren. Stemming no puede discriminar, y solo se basa en ver las conjugaciones de las palabras de forma heurísticas, y dependiendo de la terminación es como decide a que raíz pertenece. Esto puede ocasionar problemas como por ejemplo con la palabra university, en donde el proceso de stemming la transforma a univers y puede ocasionar perdida de informacion ya que cambia el significado.\n",
     "\n",
-    "Si no se realiza stemming, las palabras quedarían conjugadas y para un procesador de texto o clasificador, no serían equivalentes aunque estén en un contexto similar. El problema es entonces que se generarían mas palabras, con lo cual aumenta el vocabulario y por ende la complejidad del dataset."
+    "Si no se realiza stemming, las palabras quedarían conjugadas y para un procesador de texto o clasificador, no serían equivalentes aunque estén en un contexto similar. El problema es entonces que se generarían mas palabras, con lo cual aumenta el vocabulario y por ende la complejidad del dataset.\n",
+    "\n",
+    "Con respecto a los \"stop words\", estos se definen en un conjunto de articulos, pronombres y preposiciones, y son quitados de las cadenas de texto, ya que son palabras muy comunes y que no aportan significado al texto, aunque en algunas aplicaciones si pueden llegar a ser utilizadas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### c)"
+    "### c) En este caso se utiliza un lemmatizer para comparar con los resultados anteriores."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -185,9 +187,145 @@
     "print word_extractor2(\"The cats are playing with fishes\")\n",
     "print word_extractor2(\"He believes in miracles\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Procesando las cadenas mediante el lemmatizer, se conserva muchas veces la conjugación de las palabras según el contexto, y también son llevadas a su tronco léxico. Por ejemplo las palabras loved y eating se conservan, y en este caso university se mantiene igualmente, no así en el proceso de stemming. Entonces la lematización es un proceso mucho más complejo, que no solo revisa cada palabra y su terminación, sino que además observa el contexto para realizar la agrupación de palabras similares."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### d) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimension conjunto de entrenamiento:  (3554, 9663)\n",
+      "Dimension conjunto de pruebas:  (3554, 9663)\n",
+      "--------------------------------------------------------------\n",
+      "10 Palabras mas frecuentes \n",
+      "\n",
+      "Conjunto de entrenamiento     Conjunto de pruebas \n",
+      "\n",
+      "566  film                     558  film\n",
+      "481  movie                    540  movie\n",
+      "246  one                      250  one\n",
+      "245  like                     238  ha\n",
+      "224  ha                       230  like\n",
+      "183  make                     197  story\n",
+      "176  story                    175  character\n",
+      "163  character                165  time\n",
+      "145  comedy                   161  make\n",
+      "143  even                     134  comedy\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "# Se crean las listas con los textos procesados\n",
+    "texts_train = [word_extractor2(text) for text in train_df.Text]\n",
+    "texts_test = [word_extractor2(text) for text in test_df.Text]\n",
+    "vectorizer = CountVectorizer(ngram_range=(1, 1), binary='False')\n",
+    "vectorizer.fit(np.asarray(texts_train))\n",
+    "#Se crea la matriz con la cuenta de los tokens(test y train)\n",
+    "features_train = vectorizer.transform(texts_train)\n",
+    "features_test = vectorizer.transform(texts_test)\n",
+    "print \"Dimension conjunto de entrenamiento: \",features_train.shape\n",
+    "print \"Dimension conjunto de pruebas: \", features_test.shape\n",
+    "print \"--------------------------------------------------------------\"\n",
+    "#label 0 y 1\n",
+    "labels_train = np.asarray((train_df.Sentiment.astype(float)+1)/2.0)\n",
+    "labels_test = np.asarray((test_df.Sentiment.astype(float)+1)/2.0)\n",
+    "vocab = vectorizer.get_feature_names()\n",
+    "dist_tr=list(np.array(features_train.sum(axis=0)).reshape(-1,))\n",
+    "dist_ts=list(np.array(features_test.sum(axis=0)).reshape(-1,))\n",
+    "#for tag, count in zip(vocab, dist):\n",
+    "#    print count, tag\n",
+    "index_tr= sorted(range(len(dist_tr)), key=lambda k: dist_tr[k], reverse=True )\n",
+    "index_ts= sorted(range(len(dist_ts)), key=lambda k: dist_ts[k], reverse=True )\n",
+    "#print sorted(dist_tr, reverse=True)[0]\n",
+    "print \"10 Palabras mas frecuentes \\n\"\n",
+    "print \"{0:<30}{1} \\n\".format(\"Conjunto de entrenamiento\",\"Conjunto de pruebas\")\n",
+    "for i in range (0,10):\n",
+    "    m1=index_tr[i]\n",
+    "    m2=index_ts[i]\n",
+    "    print '{0:<5}{1:<25}{2:<5}{3}'.format(dist_tr[m1], vocab[m1], dist_ts[m2], vocab[m2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se aprecia en la tabla anterior, que el vocabulario se compone de 9663 palabras o tokens,  y que tanto los set de entrenamiento y prueba contienen 3554 registros o \"reviews\" de usuarios. Las 10 palabras más frecuentes se repiten en gran medida en ambos conjuntos y conservan un orden similar, esto refleja que los datos presentan estructuras similares."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "def score_the_model(model,x,y,xt,yt,text):\n",
+    "    acc_tr = model.score(x,y)\n",
+    "    acc_test = model.score(xt[:-1],yt[:-1])\n",
+    "    print \"Training Accuracy %s: %f\"%(text,acc_tr)\n",
+    "    print \"Test Accuracy %s: %f\"%(text,acc_test)\n",
+    "    print \"Detailed Analysis Testing Results ...\"\n",
+    "    print(classification_report(yt, model.predict(xt), target_names=['+','-']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función $\\textit{classification_report}$  imprime 3 métricas las cuales son precision, recall y F1 score.\n",
+    "$\\textit{Precision}$ se define como:\n",
+    "\n",
+    "$$ precision = \\frac{tp}{tp+fp}$$ \n",
+    "\n",
+    "Donde tp representa los verdaderos positivos y fp los falsos positivos. Intuitivamente es la habilidad del clasificador para no etiquetar como positivo una muestra que es negativa. Su mejor valor es 1 y su peor valor es 0.\n",
+    "\n",
+    "Recall score se define como: \n",
+    "\n",
+    "$$ recall = \\frac{tp}{tp+fp}$$ \n",
+    "\n",
+    "Donde tp representa los verdaderos positivos y fp los falsos negativos. Recall representa la habilidad del clasificador para encontrar todos los ejemplos positivos. Su mejor valor es 1 y su peor valor es 0.\n",
+    "\n",
+    "Entonces $\\textit{precision}$ representa la exactitud o calidad del clasificador y $\\textit{recall}$ la medida de completitud o cantidad.\n",
+    "\n",
+    "Finalmente, F1 es una medida que utiliza las dos métricas anteriores en un promedio ponderado. Su fórmula es: \n",
+    "\n",
+    "$$ f1 = 2* \\frac{precision * recall}{precision+recall}$$\n"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
