--- a/ML-Tarea2/Pregunta 2/Pregunta 2.ipynb
+++ b/ML-Tarea2/Pregunta 2/Pregunta 2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
     "from nltk.corpus import stopwords\n",
     "from nltk import WordNetLemmatizer, word_tokenize\n",
     "from nltk.stem.porter import PorterStemmer\n",
-    "def word_extractor(text):\n",
+    "def word_extractor(text,stop = 1):\n",
     "    #wordlemmatizer = WordNetLemmatizer()\n",
     "    stemmer = PorterStemmer()\n",
     "    commonwords = stopwords.words('english')\n",
@@ -112,7 +112,10 @@
     "    wordtokens = [ stemmer.stem(word.lower()) \\\n",
     "                  for word in word_tokenize(text.decode('utf-8', 'ignore')) ]\n",
     "    for word in wordtokens:\n",
-    "        if word not in commonwords:\n",
+    "        if stop==1:\n",
+    "            if word not in commonwords:\n",
+    "                words+=\" \"+word\n",
+    "        else:\n",
     "            words+=\" \"+word\n",
     "    return words\n",
     "print word_extractor(\"I love to eat cake\")\n",
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +169,7 @@
     }
    ],
    "source": [
-    "def word_extractor2(text):\n",
+    "def word_extractor2(text, stop=1):\n",
     "    wordlemmatizer = WordNetLemmatizer()\n",
     "    commonwords = stopwords.words('english')\n",
     "    text = re.sub(r'([a-z])\\1+', r'\\1\\1',text)#substitute multiple letter by two\n",
@@ -174,7 +177,10 @@
     "    wordtokens = [ wordlemmatizer.lemmatize(word.lower()) \\\n",
     "                  for word in word_tokenize(text.decode('utf-8','ignore')) ]\n",
     "    for word in wordtokens:\n",
-    "        if word not in commonwords:\n",
+    "        if stop==1:\n",
+    "            if word not in commonwords:\n",
+    "                words+=\" \"+word\n",
+    "        else:\n",
     "            words+=\" \"+word\n",
     "    return words\n",
     "\n",
@@ -204,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -283,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -321,6 +327,223 @@
     "Finalmente, F1 es una medida que utiliza las dos métricas anteriores en un promedio ponderado. Su fórmula es: \n",
     "\n",
     "$$ f1 = 2* \\frac{precision * recall}{precision+recall}$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### f) Para el caso de Bernoulli naive bayes los features deben tener valor 0 o 1, esto lo hace automáticamente BernoulliNB de la librería sklearn."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El siguiente código crea los textos y features sin stop words y además otro utilizando stemming, para posteriormente ser analizados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# El caso comun en el puntop (d) es lemmatizer filtrando stopwords\n",
+    "# Se crea training y testing set sin filtrar stopwords mediante lemmatizer.\n",
+    "\n",
+    "texts_train_noSW = [word_extractor2(text, 0) for text in train_df.Text]\n",
+    "texts_test_noSW = [word_extractor2(text,0) for text in test_df.Text]\n",
+    "vectorizer = CountVectorizer(ngram_range=(1, 1), binary='False')\n",
+    "vectorizer.fit(np.asarray(texts_train_noSW))\n",
+    "#Se crea la matriz con la cuenta de los tokens(test y train)\n",
+    "features_train_noSW = vectorizer.transform(texts_train_noSW)\n",
+    "features_test_noSW = vectorizer.transform(texts_test_noSW)\n",
+    "\n",
+    "# Se crea training y testing set utilizando stemming\n",
+    "\n",
+    "texts_train_stem = [word_extractor(text) for text in train_df.Text]\n",
+    "texts_test_stem = [word_extractor(text) for text in test_df.Text]\n",
+    "vectorizer = CountVectorizer(ngram_range=(1, 1), binary='False')\n",
+    "vectorizer.fit(np.asarray(texts_train_stem))\n",
+    "#Se crea la matriz con la cuenta de los tokens(test y train)\n",
+    "features_train_stem = vectorizer.transform(texts_train_stem)\n",
+    "#print features_train_stem.shape\n",
+    "features_test_stem = vectorizer.transform(texts_test_stem)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Modelo con lemmatizer y filtrando stop words Bernoulli NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy BernoulliNB: 0.958638\n",
+      "Test Accuracy BernoulliNB: 0.738531\n",
+      "Detailed Analysis Testing Results ...\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          +       0.75      0.73      0.74      1803\n",
+      "          -       0.73      0.75      0.74      1751\n",
+      "\n",
+      "avg / total       0.74      0.74      0.74      3554\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "import random\n",
+    "def do_NAIVE_BAYES(x,y,xt,yt):\n",
+    "    model = BernoulliNB()\n",
+    "    model = model.fit(x, y)\n",
+    "    score_the_model(model,x,y,xt,yt,\"BernoulliNB\")\n",
+    "    return model\n",
+    "model=do_NAIVE_BAYES(features_train,labels_train,features_test,labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La tabla anterior muestra que el desempeño de Bernoulli Naive Bayes no es del todo bueno, ya que presenta una alta exactitud en el set de entrenamiento, pero mucho peor en el de pruebas, dando entender que el modelo esta sobre ajustando los datos. Esto también queda en evidencia con los otros indicadores como precision y recall, de donde la calidad para clasificar no es muy alta, y tampoco es completa. Esto puede deberse principalmente a que no se toma en cuenta la cantidad de palabras o tokens en cada registro, sino que son transformados a 0 o 1, perdiendo así información."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Modelo con lemmatizer sin filtrar stop words Bernoulli NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy BernoulliNB: 0.955262\n",
+      "Test Accuracy BernoulliNB: 0.748663\n",
+      "Detailed Analysis Testing Results ...\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          +       0.76      0.74      0.75      1803\n",
+      "          -       0.74      0.76      0.75      1751\n",
+      "\n",
+      "avg / total       0.75      0.75      0.75      3554\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_noSW=do_NAIVE_BAYES(features_train_noSW,labels_train,features_test_noSW,labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aquí no se presenta gran mejora, el modelo sigue sobre ajustando, pero al no considerarse el número de stop words, sino que solo se interpreta como si aparece o no la palabra, no afecta demasiado a los resultados. Una ventaja es que requiere menos procesamiento de cómputo y se obtiene levemente un mejor resultado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Modelo con stemmer Bernoulli NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy BernoulliNB: 0.942881\n",
+      "Test Accuracy BernoulliNB: 0.747819\n",
+      "Detailed Analysis Testing Results ...\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          +       0.76      0.74      0.75      1803\n",
+      "          -       0.74      0.75      0.75      1751\n",
+      "\n",
+      "avg / total       0.75      0.75      0.75      3554\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_stem = do_NAIVE_BAYES(features_train_stem,labels_train,features_test_stem,labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al igual que el caso anterior, la mejora es muy pequeña, sin embargo al usar stemming el procesamiento de los datos es más rápido ya que no debe interpretar el contexto y además genera muchos menos features que lemmatization, 1700 palabras menos en el vocabulario aproximadamente. Esto muestra que bernoulli no se ve afectado por la cantidad de features en gran medida."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Analisis exploratorio Bernoulli NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.26622002  0.73377998] you wouldn't want to live waydowntown , but it is a hilarious place to visit .\n",
+      "\n",
+      "[ 0.17491976  0.82508024] what makes it worth watching is quaid's performance .\n",
+      "\n",
+      "[ 0.55956959  0.44043041] both the crime story and the love story are unusual . but they don't fit well together and neither is well told .\n",
+      "\n",
+      "[ 0.60586349  0.39413651] this overproduced and generally disappointing effort isn't likely to rouse the rush hour crowd .\n",
+      "\n",
+      "[ 0.9894078  0.0105922] it's another video movie photographed like a film , with the bad lighting that's often written off as indie film naturalism .\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_pred = model.predict_proba(features_test)\n",
+    "#print model.classes_\n",
+    "spl = random.sample(xrange(len(test_pred)), 5)\n",
+    "for text, sentiment in zip(test_df.Text[spl], test_pred[spl]):\n",
+    "    print sentiment, text"
    ]
   }
  ],
