--- a/ML-Tarea2/Pregunta 2/Pregunta 2.ipynb
+++ b/ML-Tarea2/Pregunta 2/Pregunta 2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### f) Para el caso de Bernoulli naive bayes los features deben tener valor 0 o 1, esto lo hace automáticamente BernoulliNB de la librería sklearn."
+    "## f) Bernoulli Naive Bayes"
    ]
   },
   {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -382,8 +382,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para el caso de Bernoulli naive bayes los features deben tener valor 0 o 1, esto lo hace automáticamente BernoulliNB de la librería sklearn."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -432,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -474,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -504,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Al igual que el caso anterior, la mejora es muy pequeña, sin embargo al usar stemming el procesamiento de los datos es más rápido ya que no debe interpretar el contexto y además genera muchos menos features que lemmatization, 1700 palabras menos en el vocabulario aproximadamente. Esto muestra que bernoulli no se ve afectado por la cantidad de features en gran medida."
+    "Al igual que el caso anterior, la mejora es muy pequeña, sin embargo al usar stemming el procesamiento de los datos es más rápido ya que no debe interpretar el contexto y además genera muchos menos features que lemmatization, 1700 palabras menos en el vocabulario aproximadamente. Esto muestra que bernoulli no se ve afectado por la cantidad de features en gran medida. Por lo mismo se concluye que stemming resulta ser mejor tecnica de pre procesamiento que lemmatization."
    ]
   },
   {
@@ -516,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -525,15 +532,173 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.26622002  0.73377998] you wouldn't want to live waydowntown , but it is a hilarious place to visit .\n",
+      "[ 0.77367839  0.22632161] a dreary rip-off of goodfellas that serves as a muddled and offensive cautionary tale for hispanic americans .\n",
       "\n",
-      "[ 0.17491976  0.82508024] what makes it worth watching is quaid's performance .\n",
+      "[ 0.17979147  0.82020853] solaris \" is a shapeless inconsequential move relying on the viewer to do most of the work .\n",
       "\n",
-      "[ 0.55956959  0.44043041] both the crime story and the love story are unusual . but they don't fit well together and neither is well told .\n",
+      "[ 0.11041063  0.88958937] it's a deeply serious movie that cares passionately about its subject , but too often becomes ponderous in its teaching of history , or lost in the intricate connections and multiple timelines of its story .\n",
       "\n",
-      "[ 0.60586349  0.39413651] this overproduced and generally disappointing effort isn't likely to rouse the rush hour crowd .\n",
+      "[ 0.82238911  0.17761089] guy gets girl , guy loses girl , audience falls asleep .\n",
       "\n",
-      "[ 0.9894078  0.0105922] it's another video movie photographed like a film , with the bad lighting that's often written off as indie film naturalism .\n",
+      "[ 0.98576999  0.01423001] it's mighty tedious for the viewer who has to contend with unpleasant characters , hit-and-miss performances and awkwardly staged scenes .\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_pred = model.predict_proba(features_test)\n",
+    "#print model.classes_\n",
+    "spl = random.sample(xrange(len(test_pred)), 5)\n",
+    "for text, sentiment in zip(test_df.Text[spl], test_pred[spl]):\n",
+    "    print sentiment, text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# g) Multinomial Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Modelo con lemmatizer y filtrando stop words Multinomial NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy MultinomialNB: 0.959482\n",
+      "Test Accuracy MultinomialNB: 0.740782\n",
+      "Detailed Analysis Testing Results ...\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          +       0.75      0.73      0.74      1803\n",
+      "          -       0.73      0.75      0.74      1751\n",
+      "\n",
+      "avg / total       0.74      0.74      0.74      3554\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "import random\n",
+    "def do_MULTINOMIAL(x,y,xt,yt):\n",
+    "    model = MultinomialNB()\n",
+    "    model = model.fit(x, y)\n",
+    "    score_the_model(model,x,y,xt,yt,\"MultinomialNB\")\n",
+    "    return model\n",
+    "model=do_MULTINOMIAL(features_train,labels_train,features_test,labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Modelo con lemmatizer sin filtrar stop words Multinomial NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy MultinomialNB: 0.955543\n",
+      "Test Accuracy MultinomialNB: 0.747537\n",
+      "Detailed Analysis Testing Results ...\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          +       0.75      0.75      0.75      1803\n",
+      "          -       0.74      0.74      0.74      1751\n",
+      "\n",
+      "avg / total       0.75      0.75      0.75      3554\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_noSW=do_MULTINOMIAL(features_train_noSW,labels_train,features_test_noSW,labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Modelo con stemmer Multinomial NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy MultinomialNB: 0.942319\n",
+      "Test Accuracy MultinomialNB: 0.749789\n",
+      "Detailed Analysis Testing Results ...\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          +       0.76      0.75      0.75      1803\n",
+      "          -       0.74      0.75      0.75      1751\n",
+      "\n",
+      "avg / total       0.75      0.75      0.75      3554\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_stem = do_MULTINOMIAL(features_train_stem,labels_train,features_test_stem,labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Analisis exploratorio Multinomial NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.6288532  0.3711468] it is just too bad the film's story does not live up to its style .\n",
+      "\n",
+      "[ 0.29204385  0.70795615] o fantasma is boldly , confidently orchestrated , aesthetically and sexually , and its impact is deeply and rightly disturbing .\n",
+      "\n",
+      "[ 0.3308125  0.6691875] there's something auspicious , and daring , too , about the artistic instinct that pushes a majority-oriented director like steven spielberg to follow a . i . with this challenging report so liable to unnerve the majority .\n",
+      "\n",
+      "[ 0.44415703  0.55584297] it's all surface psychodramatics .\n",
+      "\n",
+      "[ 0.88396514  0.11603486] plays like a checklist of everything rob reiner and his cast were sending up .\n",
       "\n"
      ]
     }
