--- a/ML-Tarea2/Pregunta 2/Pregunta 2.ipynb
+++ b/ML-Tarea2/Pregunta 2/Pregunta 2.ipynb
@@ -491,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aquí no se presenta gran mejora, el modelo sigue sobre ajustando, pero al no considerarse el número de veces que aparece un stop word en un texto, sino que solo se interpreta como si está o no, esto no afecta demasiado a los resultados. Una ventaja es que requiere menos procesamiento de cómputo y se obtiene levemente un mejor resultado."
+    "Aquí no se presenta gran mejora, el modelo sigue sobre ajustando, pero al no considerarse el número de veces que aparece un stop word en un texto, sino que solo se interpreta como si está o no, esto no afecta demasiado a los resultados. Una ventaja es que requiere menos pre procesamiento, sin embargo al tener mas tokens, aumenta el procesamiento de cómputo del modelo."
    ]
   },
   {
@@ -868,13 +868,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Al igual que en Bernoulli Naive Bayes, se presentan el mismo tipo de errores de clasificación, aunque en este caso la repetición de una palabra afecta mucho mas a las probabilidades que el clasificador asigna a cada clase. Al ser las palabras condicionalmente independientes a cada clase, es irrelevante la distribución entre ellas, es por esto que si una palabra esta en muchos textos clasificados de cierta forma, inmediatamente afecta la probabilidad de clasificación de esa clase, independiente de las demás palabras del mensaje. Por esto se considera ingenuo, pero aun así obtiene resultados admisibles."
+   ]
   },
   {
    "cell_type": "markdown",
