--- a/ML-Tarea2/Pregunta 1/Pregunta 1.ipynb
+++ b/ML-Tarea2/Pregunta 1/Pregunta 1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -18,10 +18,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(528, 11)\n",
-      "(462, 11)\n",
-      "[[ 1  2  3  4  5  6  7  8  9 10 11]\n",
-      " [48 48 48 48 48 48 48 48 48 48 48]]\n"
+      "Cantidad de clases:  11\n",
+      "Registros en el conjunto de entrenamiento:  528\n",
+      "Registros en el conjunto de prueba:  462\n",
+      "Cantidad de palabras por clase:\n",
+      "[ 1  2  3  4  5  6  7  8  9 10 11]\n"
      ]
     },
     {
@@ -152,7 +153,7 @@
        "462        0.697  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,9 +174,11 @@
     "train_df = pd.DataFrame.from_csv('train_data.csv', header=0, index_col=0)\n",
     "test_df = pd.DataFrame.from_csv('test_data.csv', header=0, index_col=0)\n",
     "\n",
-    "print train_df.shape\n",
-    "print test_df.shape\n",
-    "print np.array(sorted(Counter(train_df.ix[:,'y'].values).items())).T\n",
+    "print \"Cantidad de clases: \", train_df.shape[1]\n",
+    "print \"Registros en el conjunto de entrenamiento: \", train_df.shape[0]\n",
+    "print \"Registros en el conjunto de prueba: \", test_df.shape[0]\n",
+    "print \"Cantidad de palabras por clase:\"\n",
+    "print np.array(sorted(Counter(train_df.ix[:,'y'].values).items())).T[0]\n",
     "\n",
     "#train_df.describe()\n",
     "#train_df.head()\n",
@@ -186,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El conjunto de entrenamiento tiene 528 registritos y el de prueba tiene 462 registros. Además, en el conjunto de entrenamiento cada una de las 11 clases tiene 48 palabras."
+    "El conjunto de entrenamiento tiene 528 registos y el de prueba tiene 462 registros. Además, en el conjunto de entrenamiento cada una de las 11 clases tiene 48 palabras."
    ]
   },
   {
